# SPDX-FileCopyrightText: 2024-2025 Knode.ai
# SPDX-License-Identifier: Apache-2.0
# Maintainer: Andy Curtis <contactandyc@gmail.com>
cmake_minimum_required(VERSION 3.10)

# Enable testing
enable_testing()

# Define the library to test
set(LIB_TO_TEST restinio-c)
set(TEST_SOURCES src/test_restinio.c)

set(THIRD_PARTY_PACKAGES fmt nonstd::expected-lite asio restinio)

find_package(a-cmake-library REQUIRED)

include(BinaryConfig)
